# DDDMicroservices

./: README.md  docker-compose.yml
ecommerce_frontend/: package-lock.json  package.json
ecommerce_frontend/src/: App.js  CartContext.js  cartSlice.js
init_scripts/: 01-create-databases.sql  02-create-tables-db1.sql  03-create-tables-db2.sql
inventory_management/: .env  .gitignore  Cargo.toml  Program.cs  appsettings.json  diesel.toml  down.sql  inventory_management.csproj  inventory_management.sln  script.txt  up.sql
inventory_management/Data/: InventDbContext.cs
inventory_management/Models/: product.cs  stock_balance.cs  stock_movement.cs
inventory_management/Services/: RabbitMqConsumer.cs
inventory_management/src/: main.rs  models.rs  schema.rs  stock_processor.rs
kafka/: docker-compose.yml
kong_api_gateway/: docker-compose.yml
notification_service/: .gitignore  Program.cs  appsettings.json  notification_service.csproj  notification_service.http  notification_service.sln
notification_service/Controllers/: NotificationController.cs
notification_service/Models/: OrderNotification.cs
notification_service/Services/: FirebaseNotificationService.cs  KafkaConsumerService.cs  KafkaProducerService.cs
order_management/: database.py  main.py  models.py  orders.sql  schemas.py
ordermanagement/: crud.py  database.py  init_db.py  main_backup.py
produc_tmanagement/src/: main.ts
productmanagement/: .env_BACKUP  package-lock.json  package.json
stripe_payment_gateway/: .env  .env_BACKUP  .gitignore  go.mod  go.sum  main.go
user_management/: pom.xml
(+35 files in other folders)
